2008-08-22  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.csproj, Mono.Addins.mdp: Use msbuild file format for
	  projects. Removed the old MD1 projects.

2008-08-18  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/AddinSessionService.cs, Mono.Addins/TreeNode.cs,
	  Mono.Addins/Addin.cs, Mono.Addins/ExtensionContext.cs: When the
	  registry is updated in memory, reset cached data from all extension
	  contexts.
	* Mono.Addins.Database/AddinDatabase.cs: Optimized Update method. The
	  call to GetInstalledAddins loads all manifests when the provided
	  AddinType is not All. Avoided using it.

2008-07-16  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Database/AddinScanner.cs: When a new domain needs to be
	  assigned to a folder, try to reuse the startup domain, if it is
	  set.

2008-07-16  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/AddinRegistry.cs,
	  Mono.Addins.Database/AddinScanFolderInfo.cs,
	  Mono.Addins.Database/AddinDatabase.cs,
	  Mono.Addins.Database/AddinScanner.cs: Properly assign the domain
	  when scanning an application for the first time.

2008-07-15  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Description/AddinDescription.cs,
	  Mono.Addins.Description/ModuleDescription.cs,
	  Mono.Addins.Database/AddinScanFolderInfo.cs,
	  Mono.Addins.Database/AddinScanResult.cs,
	  Mono.Addins.Database/AddinDatabase.cs,
	  Mono.Addins.Database/AddinScanner.cs: Add support for specifying
	  paths to exclude in .addins files and in add-in manifests.
	* Mono.Addins.Database/Util.cs: Make sure window paths are converted to
	  unix paths when running on unix, and vice-versa.

2008-07-15  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/AddinRegistry.cs,
	  Mono.Addins.Database/AddinScanResult.cs,
	  Mono.Addins.Database/AddinDatabase.cs,
	  Mono.Addins.Database/AddinScanner.cs: When updating the registry,
	  only scan folders which belong to the current domain.
	* Mono.Addins/ExtensionContext.cs: Fix warning.
